# bevy_harmonize

./: .gitignore  Cargo.toml  README.md  flake.nix
codegen/: .gitignore
codegen/crates/my_cube_test/: Cargo.toml  lib.rs
crates/api/: Cargo.toml
crates/api/src/: allocator.rs  external.rs  lib.rs  panic.rs
crates/api/src/ecs/: generic.rs  mod.rs  resource.rs  storage.rs
crates/api/src/ecs/system/: function_system.rs  mod.rs  schedule.rs  system.rs  system_param.rs  system_set.rs
crates/api/src/ecs/system/params/: commands.rs  resource.rs
crates/api/src/internal/: manifest.rs
crates/api/src/schema/: a_mod.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  schedule.rs  type_signature.rs  utils.rs
crates/const_vec/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs  type_signatures.rs
examples/: client.rs
examples/mods/: README.md
mods/examples/: my_cube.rs
src/: lib.rs  mods.rs
src/devtools/: mod.rs
src/loaded/: mod.rs
src/mods/: engine.rs  mod.rs
src/mods/loaded/: feature.rs  mod.rs  schedule.rs
