[package]
name = "bevy_harmonize"
description = "A familiar, yet powerful take on a modding system for the Bevy game engine"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "crates/common" }
bevy_harmonize_build = { path = "crates/build" }

anyhow.workspace = true
async-channel.workspace = true
async-fs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_platform.workspace = true
bevy_tasks.workspace = true
bevy_utils.workspace = true
bincode.workspace = true
futures-lite.workspace = true
notify.workspace = true
petgraph.workspace = true
sha2.workspace = true
tracing.workspace = true
wasmer.workspace = true

[dev-dependencies]
bevy.workspace = true

[workspace]
resolver = "2"
members = ["crates/*", "codegen/crates/*"]

[workspace.dependencies]
wasmbin = { version = "0", features = [
    "multi-memory",
    "custom-page-sizes",
], git = "https://github.com/MarcGuiselin/wasmbin.git", branch = "custom-page-sizes" }
anyhow = "1.0.98"
async-channel = "2.3.1"
async-process = "2.3.0"
async-std = "1.13.1"
async-fs = "2.1.2"
bart = "0.1.6"
bart_derive = "0.1.6"
bevy = "0.16.0"
bevy_app = "0.16.0"
bevy_ecs = "0.16.0"
bevy_ecs_macros = "0.16.0"
bevy_platform = "0.16.0"
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_reflect_derive = "0.16.0"
bevy_tasks = "0.16.0"
bevy_utils = "0.16.0"
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "serde",
    "derive",
] }
const_panic = "0.2.12"
clap = "4.5.37"
dunce = "1.0.5"
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
notify = "8.0.0"
petgraph = "0.8.1"
quote = "1.0.40"
serde = { version = "1.0.219", default-features = false }
sha2 = "0.10.8"
syn = "2.0.101"
tracing = "0.1.41"
variadics_please = "1.1.0"
wasmer = "6.0.0"
wasmtime = "32.0.0"
which = "7.0.3"

# Enable small optimizations for local code
[profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
# opt-level = 2 # TODO Set to 3 once stuff starts to stabilize

[[example]]
name = "client"
path = "examples/client.rs"
doc-scrape-examples = true
