[package]
name = "bevy_harmonize_api"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "../common" }
const_vec = { package = "const_vec", path = "../const_vec" }
derive = { package = "bevy_harmonize_derive", path = "../derive" }

bitcode = { workspace = true, features = ["serde"] }
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
const_panic.workspace = true
serde.workspace = true
tracing.workspace = true
variadics_please.workspace = true
